deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookshelf-service
spec:
  selector:
    app: bookshelf
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
